resolve conflict, add test and controller
